# sv_query

./: .gitignore  BUG_PRIORITY.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_composition_chain.md  DESIGN_cross_module_tracking.md  DEVELOPMENT.md  EXAMPLES.md  LICENSE  LICENSE_MIT  README.md  TODO_IMPROVEMENTS.md  TODO_weak_assertions_DONE.md  cat_failures2.py  dev_readme.md  pyproject.toml  requirements.txt  run_cli.py
.github/workflows/: benchmark.yml  check_discipline.py  coverage-gen.yml  tests.yml
config/: signal_classify.yaml
config/protocols/: ahb.yaml  apb.yaml  axi4.yaml  axistream.yaml  tlul.yaml  wishbone.yaml
config/protocols/normalize/: default.yaml
config/protocols/semantics/: ahb.yaml  apb.yaml  axi4.yaml  tlul.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DEEP_REVIEW.md  ARCHITECTURE_EVOLUTION.md  ARCHITECTURE_IMPROVEMENT.md  ARCHITECTURE_REFACTOR_IMPACT.md  ARCHITECTURE_REPORT_v1.md  ARCHITECTURE_REVIEW_2026-07-15.md  ARCHITECTURE_SIGNAL_CONNECTION.md  ARCHITECTURE_UNDERLYING_ABSTRACTION.md  ARCH_EXAMPLES.md  ARCH_VISUALIZATION.md  BACKPRESSURE_HANDSHAKE_DEV_PLAN.md  CDC_ANALYSIS.md  CLI_COMMAND_CHEATSHEET.md  CODE_DISCIPLINE_FIX_COMPLETENESS.md  CODE_DISCIPLINE_REVIEW.md  CONNECTION_vs_MIG_analysis.md  CONTROL_FLOW_ANALYSIS.md  CONTROL_FLOW_DEBUG.md  CONTROL_FLOW_DESIGN.md  CONTROL_FLOW_IMPROVEMENTS.md  COVERAGE_GEN.md  COVERAGE_GENERATOR.md  COVERAGE_GENERATOR_PLAN.md  COVERAGE_GENERATOR_V1.md  COVERAGE_GENERATOR_V2.md  COVERAGE_GENERATOR_V2_SUMMARY.md  DATAFLOW_ANALYSIS_ARCHITECTURE.md  DATAFLOW_CONTROLFLOW_USAGE.md  DATAFLOW_IMPLEMENTATION_PLAN.md  DESIGNER_PLAN.md  DESIGN_BOUNDARY_CONTROL.md  DESIGN_COVERGROUP_EXTRACTION.md  DESIGN_PYSALNG_VISIT_BASED_ONHANDLER.md  DEVELOPMENT.md  DISCIPLINE_VIOLATIONS.md  DOCS_INVENTORY.md  DOC_IMPL_GAP.md  (+74 more)
docs/architecture/: AI_REQUIREMENTS.md  CLASS_CONSTRAINT_PLAN.md  CONNECTION_vs_MIG_analysis.md  CORE_RESTRUCTURE.md  GRAPH_DIFF_DESIGN.md  README.md  SV_SYNTAX_ROADMAP.md  architecture.md  code_framework_analysis.md  signal_graph_mig_port_to_internal.md
docs/archive/: API_MIGRATION_trees_to_sources.md  GRAPH_BUILDER_DEEP_REVIEW.md  GRAPH_BUILDER_REFACTOR_PLAN.md  ISSUE_17_CASE_BS_MULT.md  ISSUE_17_ROOT_CAUSE.md  ISSUE_18_CONCLUSION.md  ISSUE_ROOT_CAUSE.md  P1_EXPRESSION_NODE_TASKS.md  README.md  README_legacy.md  REFACTOR_GUIDE.md  SCHEMA_COMPARISON.md  TODO_IMPROVEMENTS.md  TODO_weak_assertions_DONE.md  dev_readme.md
docs/opentitan实战/: README.md  RTL_COMPLEXITY_ANALYSIS.md  uart_tx_driver追踪.md
docs/opentitan实战/verification/: README.md
docs/refactoring/: 2026-06-26_b-phase_1-2_baseline.md  2026-06-26_bad_smell_audit.md  2026-06-26_extract_refactoring.md  2026-06-26_refactoring_roadmap.md  README.md
examples/: comprehensive_analysis.py  uvm_packet_coverage_demo.sv
examples/exploration/: poc_visit_boundary.py
memory/: 2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-14.md  2026-06-25.md  2026-07-10.md
scripts/: HANDLER_COMPLETE_REPORT.md  add_missing_handlers.py  extra_handlers_to_remove.txt  generate_opentitan_filelist.sh  remove_handlers_v3.py  remove_handlers_v5.py  scan_protocols.py  validate_handlers.py
scripts/debug/: cat_failures.py  test_call_node.py  test_function_semantic.py
sim/: DEVELOPMENT_PLAN.md  TEST_PLAN.md  TEST_REPORT.md  TEST_REPORT_FULL.md  openTitan_validation.sv  test_cases.sv  test_cdc.sv  test_comprehensive.sv  test_gold_comprehensive.py  test_golden.py  test_golden_cases.py  test_multi.sv  test_simple.sv
sim/tests/: __init__.py  conftest.py  manual_ventus_chunk.sh  sv_compile_check.py  test_report.py
sim/tests/cli/: __init__.py  test_arch.py  test_arch_understand.py  test_backfill_source_locations.py  test_cli_f_flag_filelist_routing.py  test_coverage_analyze.py  test_coverage_gap.py  test_coverage_gen_demo.py  test_coverage_gen_demo_golden.py  test_coverage_gen_sv_compile.py  test_coverage_generate.py  test_cross_viz_consistency.py  test_design.py  test_diff.py  test_golden_chain_anomalies.py  test_no_swap_reclaim.py  test_randomize.py  test_randomize_reachability.py  test_randomize_reachability_extended.py  test_randomize_trace.py  test_reachability_semantic_golden.py  test_trace.py  test_trace_batch.py  test_trace_cache_error.py  test_trace_filters.py  test_trace_snapshot.py  test_ventus_all_viz_validation.py  test_ventus_chunk_filelist.py  test_ventus_viz_validation.py  test_visualize_chain.py  test_visualize_dataflow.py  test_visualize_graph_source.py  test_visualize_latency_golden.py  test_visualize_pipeline.py  test_visualize_teach.py  test_visualize_teach_edge_condition.py  test_visualize_teach_source.py
sim/tests/integration/: __init__.py  conftest.py  openchip_qa_full_test.py  test_advanced_grammar.py  test_advanced_syntax.py  test_aliases.py  test_assign_chain.py  test_benchmark_picorv32.py  test_benchmark_pr5.py  test_benchmark_regression.py  test_bit_select.py  test_branch_chain.py  test_case_stmt.py  test_cdc.py  test_cdc_multiclock.py  test_cdc_risk_open_source.py  test_clock_edge.py  test_clock_reset_timing.py  test_combo_chain.py  test_complex_conditions.py  test_complex_sequential.py  test_concat_and_hierarchy.py  test_dataflow_controlflow_open_source.py  test_dataflow_else_if_comprehensive.py  test_dataflow_else_if_typo.py  test_dataflow_golden.py  test_dataflow_latency_open_source.py  test_directives.py  test_evidence_assign_comb.py  test_evidence_class_constraint.py  test_evidence_cli_integration.py  test_evidence_credibility.py  test_fan_query.py  (+29 more)
src/: __init__.py
src/applications/: __init__.py
src/cli/: __init__.py  _common.py  _entry.py  _evidence_helpers.py  _viz_common.py  errors.py  main.py
src/trace/: __init__.py  _safe.py  unified_tracer.py
tests/golden/: axi_xbar_module.json  synchronizer_module.json  uart_top_module.json
tools/: README.md  coverage_gen_demo.py  coverage_gen_sv_compile.py  fix_timescale.py  llm_schema.json  llm_schema_validate.py
tools/benchmark/: README.md  __init__.py  check_regression.py  run_benchmark.py
tools/golden/: diff.py  gen.py
(+466 files in other folders)
