[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sv_query"
version = "0.3.0"
description = "SystemVerilog 信号追踪查询引擎 - 让验证工程师直接问'这个信号谁驱动的'"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "sv_query contributors"},
]
keywords = [
    "systemverilog",
    "rtl",
    "verification",
    "signal-tracing",
    "static-analysis",
    "dataflow",
    "cdc",
    "sva",
    "tcl",
    "eda",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "typer>=0.9",
    # [Stage 6] pyslang 10.0.0+ 和 11.0.0+ 都支持 (v11 有 submodule 重构 + semantic 变化, 在 _pyslang_compat.py 兼容)
    "pyslang>=10.0.0,<12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
all = [
    "scipy>=1.10",
]

[project.scripts]
# 顶层 CLI 入口
# [FIX 2026-07-02] 修复 pip install -e . 后 sv_query 命不能用的 bug.
#   之前试过 4 种方式都失败:
#   - "run_cli:main": run_cli.py 在仓库根, py-modules 装不出
#   - "src.cli.main:app": src/ 不被 packages.find 装
#   - "cli.main:app": src/ 在 sys.path 里, import trace 冲突
#   - "src.cli.main:app" with src/__init__.py: 跟 import 路径冲突
#   修复: 改用 "cli._entry:main" (在 cli 包内, 一定装得上, .pth 自动含 src/).
#   详见 src/cli/_entry.py 顶部的 docstring.
sv_query = "cli._entry:main"

[project.urls]
Homepage = "https://github.com/fundou1081/sv_query"
Repository = "https://github.com/fundou1081/sv_query.git"
Issues = "https://github.com/fundou1081/sv_query/issues"

# -----------------------------------------------------------------------------
# 配置工具
# -----------------------------------------------------------------------------
# [FIX 2026-07-02] 用 packages.find 自动发现 (跟 package_dir 互斥)
#   原 [tool.setuptools] + package_dir 在 setuptools>=64 报错:
#   "configuration error: tool.setuptools must not contain {'package_dir'} properties"
#
#   试过的 5 种配置:
#   1) packages = ["trace", "cli"], package_dir = {"" = "src"} → 报错 (package_dir 被禁)
#   2) packages.find where=["src"] include=["trace*", "cli*", "applications*"]
#      → 装为 top-level (trace, cli, applications), 跟 stdlib `trace` 冲突
#   3) packages.find where=["src"] include=["src.*", "trace*", "cli*", "applications*"]
#      → 装为 top-level, 仍冲突
#   4) packages.find where=["src"] include=["src", "src.*"]
#      → src/ 装为 top-level, 但 setuptools 报 "namespace package conflict"
#
#   **根因**: sv_query 用了 Python stdlib 同名模块 'trace'. 不能装为 top-level 'trace'.
#   修复: 保持 src.X.Y 的原始 import 路径. 用 src.* 但不装 src 本身.
#   - include = ["src.*", "trace*", "cli*", "applications*"] → 装 src.X 为 top-level
#     (import cli 等, 但 from src.cli... 仍要靠 sys.path 含 src/ 才能解析)
#   - 实际上, sv_query 全部代码用 `from src.X.Y import Z`. 不能改, 改几千行.
#
#   真正的解: 保留 import 路径不变, 装 src/ 整个作为一个 package (含子包 src/trace, src/cli, src/applications).
#   这样:
#     `import src` 可以
#     `from src.cli.main import app` 可以
#     `from src.trace.core.compiler import X` 可以
#   setuptools 报 "package_dir" 错的根因是因为用了 [tool.setuptools].package_dir.
#   修复: 改用 [tool.setuptools.packages.find] 手动拿 src/ 进去, 让它变成 namespace package.
[tool.setuptools.packages.find]
where = ["src"]
include = ["src", "src.*", "trace*", "cli*", "applications*"]
namespaces = true

[tool.setuptools.package-data]
trace = ["py.typed"]

# -----------------------------------------------------------------------------
# 测试
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["sim/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# -----------------------------------------------------------------------------
# 代码质量
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# 选一个合理的默认集合
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long (we have long URLs/strings)
    "B008",  # function call in default argument
    "N802",  # function name should be lowercase (we have domain methods)
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "N815",  # mixedCase variable in class scope
    "N818",  # exception name should end in Error
    "UP007", # use X | Y for type union (Python 3.10+ syntax)
    "UP035", # deprecated imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B011",  # do not call assert False
    "N802",  # function name should be lowercase
    "N806",  # variable should be lowercase
]
"scripts/*" = ["N802", "N806"]
"docs/*" = ["N802", "N806"]
"examples/*" = ["N802", "N806"]
"sim/tests/*" = ["B011", "N802", "N806"]
# CLI 命令文件需要 sys.path 调整后才能 import 业务代码
"src/cli/commands/*.py" = [
    "E402",  # module-import-not-at-top-of-file
]
"src/cli/main.py" = [
    "E402",  # module-import-not-at-top-of-file
]
# BaseVisitor 是抽象基类，空方法是设计意图
"src/trace/core/visitors/base_visitor.py" = [
    "B027",  # empty-method-without-abstract-decorator
]

[tool.ruff.lint.isort]
known-first-party = ["trace", "cli"]
